--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
     background: linear-gradient(to right, #e40505, #0c1fae);
 }
-#login {
+#login, #registro {
     width: 50%;
     border: 5px solid rgb(54, 16, 169);
     border-radius: 10px;
@@ -9,7 +9,7 @@ body{
     padding: 30px;
     background: rgb(239, 236, 236);
     opacity: .8;
-    box-shadow: 10px 10px 10px 0px rbga(0,0,0,.5);
+    box-shadow: 10px 10px 10px 0px rgba(0,0,0,.5);
 }
 
 #link {
